Fix Iterator::end() and move insert() out

--- a/c++/Makefile
+++ b/c++/Makefile
@@ -1,6 +1,8 @@
 CXX=c++
 CXXFLAGS= -Wall -Wextra -std=c++11 -O3
 
+DEBUG= -g -ggdb
+
 SRC=main.cc
 EXE=$(SRC:.cc=.x)
 
@@ -9,8 +11,12 @@ all: $(EXE)
 %.x:%.cc
 	$(CXX) $(CXXFLAGS) $< -o $@
 
+debug: CXXFLAGS += $(DEBUG)
+debug: all
+
+
 clean:
 	rm -rf *~ $(EXE)
 
-.PHONY: clean all
+.PHONY: clean all debug
 
