Brief Description of benchmark inserted on README.md

--- a/c++/Makefile
+++ b/c++/Makefile
@@ -11,8 +11,10 @@ all: $(EXE)
 %.x:%.cc
 	$(CXX) $(CXXFLAGS) $< -o $@
 
-debug: CXXFLAGS += $(DEBUG)
+debug: CXXFLAGS += $(DEBUG) -DTEST
 debug: all
+debug: 
+	valgrind ./${EXE} 
 
 test: CXXFLAGS += -DTEST
 test: all
